@@ -10,6 +10,7 @@ import com.boomi.flow.services.boomi.mdh.quarantine.QuarantineQueryResponse;
 import com.boomi.flow.services.boomi.mdh.quarantine.QuarantineRepository;
 import com.boomi.flow.services.boomi.mdh.records.ElementIdFinder;
 import com.boomi.flow.services.boomi.mdh.records.GoldenRecordRepository;
+import com.google.common.collect.ImmutableMap;
 import com.manywho.sdk.api.ComparisonType;
 import com.manywho.sdk.api.CriteriaType;
 import com.manywho.sdk.api.run.elements.type.ListFilter;
@@ -22,10 +23,7 @@ import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 
 import java.time.OffsetDateTime;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
@@ -42,7 +40,7 @@ public class DatabaseLoadQuarantineEntryTests {
 
     private QuarantineQueryResponse response = new QuarantineQueryResponse()
             .setEntries(
-                    List.of(
+                    Arrays.asList(
                             createQuarantineEntry(1),
                             createQuarantineEntry(2)
                     )
@@ -95,7 +93,7 @@ public class DatabaseLoadQuarantineEntryTests {
 
     @Test
     public void testLoadWithNoFilter() {
-        var query = new QuarantineQueryRequest()
+        QuarantineQueryRequest query = new QuarantineQueryRequest()
                 .setFilter(new QuarantineQueryRequest.Filter())
                 .setIncludeData(true);
 
@@ -120,7 +118,7 @@ public class DatabaseLoadQuarantineEntryTests {
 
     @Test
     public void testLoadWithComprehensiveFilter() {
-        var wheres = new ArrayList<ListFilterWhere>();
+        List<ListFilterWhere> wheres = new ArrayList<>();
         wheres.add(createWhere("___status", CriteriaType.Equal, "ACTIVE"));
         wheres.add(createWhere("___sourceId", CriteriaType.Equal, "a source ID"));
         wheres.add(createWhere("___sourceEntityId", CriteriaType.Equal, "a source entity ID"));
@@ -134,14 +132,14 @@ public class DatabaseLoadQuarantineEntryTests {
         wheres.add(createWhere("___resolution", CriteriaType.Equal, "GRID_DELETED"));
         wheres.add(createWhere("___resolution", CriteriaType.Equal, "USER_APPROVED"));
 
-        var listFilter = new ListFilter();
+        ListFilter listFilter = new ListFilter();
         listFilter.setComparisonType(ComparisonType.And);
         listFilter.setLimit(123);
         listFilter.setWhere(wheres);
 
-        var query = new QuarantineQueryRequest()
+        QuarantineQueryRequest query = new QuarantineQueryRequest()
                 .setFilter(new QuarantineQueryRequest.Filter()
-                        .setCauses(List.of("AMBIGUOUS_MATCH", "MULTIPLE_MATCHES", "REQUIRED_FIELD"))
+                        .setCauses(Arrays.asList("AMBIGUOUS_MATCH", "MULTIPLE_MATCHES", "REQUIRED_FIELD"))
                         .setCreatedDate(new DateFilter()
                                 .setFrom(OffsetDateTime.parse("2013-01-01T00:00Z"))
                                 .setTo(OffsetDateTime.parse("2019-02-28T00:00Z"))
@@ -150,7 +148,7 @@ public class DatabaseLoadQuarantineEntryTests {
                                 .setFrom(OffsetDateTime.parse("2019-02-01T00:00Z"))
                                 .setTo(OffsetDateTime.parse("2019-02-14T00:00Z"))
                         )
-                        .setResolutions(List.of("GRID_DELETED", "USER_APPROVED"))
+                        .setResolutions(Arrays.asList("GRID_DELETED", "USER_APPROVED"))
                         .setSourceEntityId("a source entity ID")
                         .setSourceId("a source ID")
                 )
@@ -179,7 +177,9 @@ public class DatabaseLoadQuarantineEntryTests {
         entityWrapper.put("field 1 " + number, "field 1 value " + number);
         entityWrapper.put("field 2 " + number, "field 2 value " + number);
         entityWrapper.put("field 3 " + number, "field 3 value " + number);
-        entityWrapper.put("field 4 " + number, Map.ofEntries(Map.entry("field 4 " + number + " property", "value property 4 value 1 " + number)));
+        entityWrapper.put("field 4 " + number, ImmutableMap.<String, Object>builder()
+                                                    .put("field 4 " + number + " property", "value property 4 value 1 " + number)
+                                                    .build());
 
         Map<String, Map<String, Object>> entity = new HashMap<>();
         entity.put("dunno", entityWrapper);
@@ -197,7 +197,7 @@ public class DatabaseLoadQuarantineEntryTests {
     }
 
     private static ListFilterWhere createWhere(String columnName, CriteriaType criteriaType, String value) {
-        var where = new ListFilterWhere();
+        ListFilterWhere where = new ListFilterWhere();
 
         where.setColumnName(columnName);
         where.setCriteriaType(criteriaType);
