@@ -10,6 +10,7 @@ import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -23,21 +24,21 @@ public class ElementIdFinderTest {
 
     @Test
     public void testFindIdFromNameOfElement() {
-        var element1 = new Universe.Layout.Model.Element();
+        Universe.Layout.Model.Element element1 = new Universe.Layout.Model.Element();
         element1.setUniqueId("test_id");
         element1.setName("test_name");
 
-        var element2 = new Universe.Layout.Model.Element();
+        Universe.Layout.Model.Element element2 = new Universe.Layout.Model.Element();
         element2.setUniqueId("test_id_2");
         element2.setName("test_name_2");
 
-        var universe = new Universe()
+        Universe universe = new Universe()
                 .setId(UUID.fromString("12fa66f9-e14d-f642-878f-030b13b64731"))
                 .setLayout(new Universe.Layout()
                         .setIdXPath("/item/id")
                         .setModel(new Universe.Layout.Model()
                                 .setName("testing")
-                                .setElements(List.of(element1, element2))
+                                .setElements(Arrays.asList(element1, element2))
                         )
                 );
 
@@ -45,9 +46,9 @@ public class ElementIdFinderTest {
                 .find(any(), any(), any(), any()))
                 .thenReturn(universe);
 
-        var elementIdFinder = new ElementIdFinder(universeRepository);
-        var testId = elementIdFinder.findIdFromNameOfElement(TestConstants.CONFIGURATION, "universe 1", "test_name");
-        var testId2 = elementIdFinder.findIdFromNameOfElement(TestConstants.CONFIGURATION, "universe 1", "test_name_2");
+        ElementIdFinder elementIdFinder = new ElementIdFinder(universeRepository);
+        String testId = elementIdFinder.findIdFromNameOfElement(TestConstants.CONFIGURATION, "universe 1", "test_name");
+        String testId2 = elementIdFinder.findIdFromNameOfElement(TestConstants.CONFIGURATION, "universe 1", "test_name_2");
 
         verify(universeRepository, times(1)).find(any(), any(), any(), any());
 
